--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -1,74 +1,102 @@
 - name: Core
   packages:
     - repo: bokeh/bokeh
+      sponsors: [numfocus, anaconda]
       badges: travis, pypi, conda, site
 
     - repo: matplotlib/matplotlib
+      sponsors: [numfocus]
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: plotly/plotly.py
+      sponsors: [plotly]
       pypi_name: plotly
       conda_package: plotly
       conda_channel: conda-forge
       site: plot.ly
       badges: circleci, pypi, conda, site
 
-- name: Dashboarding
+- name: High-Level Shared API
   packages:
 
-    - repo: plotly/dash
-      conda_channel: conda-forge
-      site: dash.plot.ly
-      badges: circleci, pypi, conda, site
+    - repo: pandas-dev/pandas
+      sponsors: [numfocus]
+      site: pandas.pydata.org
+      badges: travis, appveyor, codecov, rtd, pypi, conda, site
 
-    - repo: pyviz/panel
-      site: panel.pyviz.org
-      badges: travis, appveyor, codecov, pypi, conda, site
+    - repo: pydata/xarray
+      sponsors: [numfocus]
+      appveyor_project: shoyer/xray
+      site: xarray.pydata.org
+      badges: travis, appveyor, coveralls, rtd, pypi, conda, site
 
-    - repo: QuantStack/voila
-      conda_channel: conda-forge
-      badges: travis, pypi, conda, rtd
+    - repo: dask/dask
+      sponsors: [anaconda, nvidia]
+      appveyor_project: daskdev/dask
+      badges: travis, appveyor, coveralls, rtd, pypi, conda
+
+    - repo: altair-viz/pdvega
+      site: altair-viz.github.io/pdvega
+      badges: travis, pypi, site
+
+    - repo: pyviz/hvplot
+      sponsors: [anaconda]
+      site: hvplot.pyviz.org
+      badges: travis, appveyor, pypi, conda, site
+
+    - repo: PatrikHlobil/Pandas-Bokeh
+      site: github.com/PatrikHlobil/Pandas-Bokeh/blob/master/README.md
+      badges: pypi, site
+
+    - repo: santosjorge/cufflinks
+      site: github.com/santosjorge/cufflinks/blob/master/README.md
+      badges: circleci, pypi, site
 
 - name: High-Level
   packages:
 
-    - repo: spotify/chartify
-      conda_channel: conda-forge
-      badges: travis, pypi, conda, site
-
-    - repo: pyviz/holoviews
-      appveyor_project: pyviz/holoviews-ginxt
-      badges: travis, appveyor, coveralls, pypi, conda, site
-
     - repo: mwaskom/seaborn
       site: seaborn.pydata.org
       badges: travis, codecov, pypi, conda, site
-
-    - repo: plotly/plotly_express
-      site: plotly.express
-      badges: pypi, site
 
     - repo: altair-viz/altair
       site: altair-viz.github.io
       conda_channel: conda-forge
       badges: travis, pypi, conda, site
 
-- name: High-Level Shared API
+    - repo: spotify/chartify
+      sponsors: [spotify]
+      conda_channel: conda-forge
+      badges: travis, pypi, conda, site
+
+    - repo: pyviz/holoviews
+      sponsors: [anaconda]
+      appveyor_project: pyviz/holoviews-ginxt
+      badges: travis, appveyor, coveralls, pypi, conda, site
+
+    - repo: plotly/plotly_express
+      sponsors: [plotly]
+      site: plotly.express
+      badges: pypi, site
+
+- name: Dashboarding
   packages:
-    - repo: altair-viz/pdvega
-      site: altair-viz.github.io/pdvega
-      badges: travis, pypi, site
 
-    - repo: pyviz/hvplot
-      site: hvplot.pyviz.org
-      badges: travis, appveyor, pypi, conda, site
+    - repo: plotly/dash
+      sponsors: [plotly]
+      conda_channel: conda-forge
+      site: dash.plot.ly
+      badges: circleci, pypi, conda, site
 
-    - repo: PatrikHlobil/Pandas-Bokeh
-      badges: pypi
+    - repo: pyviz/panel
+      sponsors: [anaconda]
+      site: panel.pyviz.org
+      badges: travis, appveyor, codecov, pypi, conda, site
 
-    - repo: santosjorge/cufflinks
-      badges: circleci, pypi
-
+    - repo: QuantStack/voila
+      sponsors: [quantstack]
+      conda_channel: conda-forge
+      badges: travis, pypi, conda, rtd
 
 - name: SciVis
   packages:
@@ -81,21 +109,42 @@
       badges: pypi, rtd
 
     - repo: enthought/mayavi
+      sponsors: [enthought]
       site: docs.enthought.com/mayavi/mayavi
       appveyor_project: EnthoughtOSS/mayavi
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: Kitware/ParaView
+      sponsors: [kitware]
       conda_channel: conda-forge
       badges: travis, conda, site
 
     - repo: Kitware/VTK
+      sponsors: [kitware]
       conda_channel: conda-forge
       badges: travis, pypi, conda, site
 
     - repo: yt-project/yt
+      sponsors: [numfocus]
       site: yt-project.org
       badges: travis, codecov, pypi, conda, site
+
+- name: Color
+  packages:
+
+    - repo: pyviz/colorcet
+      sponsors: [anaconda]
+      site: colorcet.pyviz.org
+      badges: travis, appveyor, pypi, conda, site
+
+    - repo: matplotlib/viscm
+      conda_channel: conda-forge
+      badges: travis, codecov, pypi, conda
+
+    - repo: matplotlib/cmocean
+      site: matplotlib.org/cmocean
+      conda_channel: conda-forge
+      badges: travis, codecov, pypi, conda
 
 - name: Domain-specific
   packages:
@@ -110,33 +159,25 @@
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: SciTools/cartopy
+      sponsors: [metoffice]
       site: scitools.org.uk/cartopy
       badges: travis, appveyor, coveralls, pypi, conda, site
 
     - repo: pyviz/geoviews
+      sponsors: [anaconda]
       site_protocol: http
       badges: travis, appveyor, pypi, conda, site
 
 - name: Other
   packages:
 
-    - repo: dask/dask
-      appveyor_project: daskdev/dask
-      badges: travis, appveyor, coveralls, rtd, pypi, conda
-
-    - repo: pandas-dev/pandas
-      site: pandas.pydata.org
-      badges: travis, appveyor, codecov, rtd, pypi, conda, site
-
-    - repo: pydata/xarray
-      appveyor_project: shoyer/xray
-      site: xarray.pydata.org
-      badges: travis, appveyor, coveralls, rtd, pypi, conda, site
-
-    - repo: pyviz/colorcet
-      site: colorcet.pyviz.org
+    - repo: pyviz/datashader
+      sponsors: [anaconda]
+      site_protocol: http
       badges: travis, appveyor, pypi, conda, site
 
-    - repo: pyviz/datashader
-      site_protocol: http
+    - repo: vaexio/vaex
+      sponsors: [vaex.io]
+      site: vaex.io
+      conda_channel: conda-forge
       badges: travis, appveyor, pypi, conda, site
