--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -113,6 +113,9 @@
     - repo: pyqtgraph/pyqtgraph
       site: http://www.pyqtgraph.org
 
+    - repo: veusz/veusz
+      site: veusz.github.io
+
 - name: Dashboarding
   intro: Libraries for creating live Python-backed applications or dashboards that a user can interact with to explore or analyze data.
   packages:
