--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -120,7 +120,7 @@
       site: biggles-plot.github.io
 
 - name: Dashboarding
-  intro: Libraries for creating live Python-backed applications or dashboards that a user can interact with to explore or analyze data.
+  intro: Libraries for creating live Python-backed web applications or dashboards that a user can interact with to explore or analyze data.
   packages:
 
     - repo: plotly/dash
