--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -15,7 +15,7 @@
       pypi_name: plotly
       conda_package: plotly
       conda_channel: conda-forge
-      site: plot.ly
+      site: https://plot.ly
       badges: circleci, pypi, conda, site
 
 - name: High-Level Shared API
@@ -24,30 +24,30 @@
 
     - repo: pandas-dev/pandas
       sponsors: [numfocus]
-      site: pandas.pydata.org
+      site: https://pandas.pydata.org
       badges: travis, appveyor, codecov, rtd, pypi, conda, site
 
     - repo: pydata/xarray
       sponsors: [numfocus]
       appveyor_project: shoyer/xray
-      site: xarray.pydata.org
+      site: https://xarray.pydata.org
       badges: travis, appveyor, coveralls, rtd, pypi, conda, site
 
     - repo: pyviz/hvplot
       sponsors: [anaconda]
-      site: hvplot.pyviz.org
+      site: https://hvplot.pyviz.org
       badges: travis, appveyor, pypi, conda, site
 
     - repo: PatrikHlobil/Pandas-Bokeh
-      site: github.com/PatrikHlobil/Pandas-Bokeh/blob/master/README.md
+      site: https://github.com/PatrikHlobil/Pandas-Bokeh/blob/master/README.md
       badges: pypi, site
 
     - repo: santosjorge/cufflinks
-      site: github.com/santosjorge/cufflinks/blob/master/README.md
+      site: https://github.com/santosjorge/cufflinks/blob/master/README.md
       badges: circleci, pypi, site
 
     - repo: altair-viz/pdvega
-      site: altair-viz.github.io/pdvega
+      site: https://altair-viz.github.io/pdvega
       badges: travis, pypi, site
 
 - name: High-Level
@@ -55,11 +55,11 @@
   packages:
 
     - repo: mwaskom/seaborn
-      site: seaborn.pydata.org
+      site: https://seaborn.pydata.org
       badges: travis, codecov, pypi, conda, site
 
     - repo: altair-viz/altair
-      site: altair-viz.github.io
+      site: https://altair-viz.github.io
       conda_channel: conda-forge
       badges: travis, pypi, conda, site
 
@@ -71,12 +71,12 @@
     - repo: spotify/chartify
       sponsors: [spotify]
       conda_channel: conda-forge
-      site: github.com/spotify/chartify/blob/master/README.rst
+      site: https://github.com/spotify/chartify/blob/master/README.rst
       badges: travis, pypi, conda, site
 
     - repo: plotly/plotly_express
       sponsors: [plotly]
-      site: plotly.express
+      site: https://plotly.express
       badges: pypi, site
 
 - name: Other plotting libraries
@@ -92,17 +92,18 @@
       badges: pypi, conda, rtd
 
     - repo: veusz/veusz
-      site: veusz.github.io
+      conda_channel: conda-forge
+      site: https://veusz.github.io
 
     - repo: sciapp/gr
-      site: gr-framework.org/python.html
+      site: https://gr-framework.org/python.html
       badges: pypi, site
 
     - repo: Kozea/pygal
+      conda_channel: conda-forge
 
     - repo: glue-viz/glue
-      site_protocol: http
-      site: docs.glueviz.org
+      site: http://docs.glueviz.org
       badges: pypi, site
 
     - repo: sandialabs/toyplot
@@ -111,13 +112,15 @@
 
     - repo: enthought/chaco
       sponsors: [enthought]
-      site: docs.enthought.com/chaco
+      site: https://docs.enthought.com/chaco
+      badges: pypi
 
     - repo: pyqtgraph/pyqtgraph
       site: http://www.pyqtgraph.org
 
     - repo: biggles-plot/biggles
-      site: biggles-plot.github.io
+      site: https://biggles-plot.github.io
+      badges: pypi
 
 - name: Dashboarding
   intro: Libraries for creating live Python-backed web applications or dashboards that a user can interact with to explore or analyze data.
@@ -126,12 +129,12 @@
     - repo: plotly/dash
       sponsors: [plotly]
       conda_channel: conda-forge
-      site: dash.plot.ly
+      site: https://dash.plot.ly
       badges: circleci, pypi, conda, site
 
     - repo: pyviz/panel
       sponsors: [anaconda]
-      site: panel.pyviz.org
+      site: https://panel.pyviz.org
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: QuantStack/voila
@@ -154,11 +157,12 @@
       badges: travis, conda, site
 
     - repo: pyvista/pyvista
-      site: docs.pyvista.org
+      site: https://docs.pyvista.org
+      conda_channel: conda-forge
 
     - repo: vispy/vispy
       conda_channel: conda-forge
-      site_protocol: http
+      site: http://vispy.org
       badges: travis, appveyor, coveralls, pypi, conda, site
 
     - repo: glumpy/glumpy
@@ -166,11 +170,12 @@
 
     - repo: enthought/mayavi
       sponsors: [enthought]
-      site: docs.enthought.com/mayavi/mayavi
+      site: https://docs.enthought.com/mayavi/mayavi
       appveyor_project: EnthoughtOSS/mayavi
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: maartenbreddels/ipyvolume
+      conda_channel: conda-forge
 
 - name: Colormapping
   intro: Collections of colormaps and tools for generating new colormaps.
@@ -178,11 +183,11 @@
 
     - repo: pyviz/colorcet
       sponsors: [anaconda]
-      site: colorcet.pyviz.org
+      site: https://colorcet.pyviz.org
       badges: travis, appveyor, pypi, conda, site
 
     - repo: matplotlib/cmocean
-      site: matplotlib.org/cmocean
+      site: https://matplotlib.org/cmocean
       conda_channel: conda-forge
       badges: travis, codecov, pypi, conda
 
@@ -197,7 +202,7 @@
 
     - repo: SciTools/cartopy
       sponsors: [metoffice]
-      site: scitools.org.uk/cartopy
+      site: https://scitools.org.uk/cartopy
       badges: travis, appveyor, coveralls, pypi, conda, site
 
     - repo: pyviz/geoviews
@@ -205,45 +210,44 @@
       site_protocol: http
       badges: travis, appveyor, pypi, conda, site
 
-    - repo: pyviz/geoviews
-      sponsors: [anaconda]
-      site_protocol: http
-      badges: travis, appveyor, pypi, conda, site
-
     - repo: python-visualization/folium
+      conda_channel: conda-forge
 
     - repo: jupyter-widgets/ipyleaflet
-      site: ipyleaflet.readthedocs.io
+      conda_channel: conda-forge
+      badges: pypi, conda, rtd
 
     - repo: andrea-cuttone/geoplotlib
-      site: github.com/andrea-cuttone/geoplotlib/wiki/User-Guide
+      site: https://github.com/andrea-cuttone/geoplotlib/wiki/User-Guide
+      badges: pypi
 
 - name: Domain-specific
   intro: Tools focused on specific research or application areas.
   packages:
 
     - repo: networkx/networkx
-      site: networkx.github.io
+      site: https://networkx.github.io
       appveyor_project: dschult/networkx-pqott
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: scikit-image/scikit-image
-      site: scikit-image.org
+      site: https://scikit-image.org
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: yt-project/yt
       sponsors: [numfocus]
-      site: yt-project.org
+      site: https://yt-project.org
       badges: travis, codecov, pypi, conda, site
 
     - repo: DistrictDataLabs/yellowbrick
-      site: www.scikit-yb.org
+      site: https://www.scikit-yb.org
       badges: pypi, site
 
     - repo: ContextLab/hypertools
-      site: hypertools.readthedocs.io
+      badges: pypi, rtd
 
     - repo: ResidentMario/missingno
+      conda_channel: conda-forge
 
 - name: Large-data rendering
   intro: Tools for server-side rasterizing/aggregating data before visualization.
@@ -251,12 +255,12 @@
 
     - repo: pyviz/datashader
       sponsors: [anaconda]
-      site_protocol: http
+      site: http://datashader.org
       badges: travis, appveyor, pypi, conda, site
 
     - repo: vaexio/vaex
       sponsors: [vaex.io]
-      site: vaex.io
+      site: https://vaex.io
       conda_channel: conda-forge
       badges: travis, appveyor, pypi, conda, site
 
@@ -268,6 +272,7 @@
     - repo: lightning-viz/lightning
       site: http://lightning-viz.org
       dormant: https://gitter.im/lightning-viz/lightning
+      badges: pypi, dormant
 
     - repo: wrobstory/vincent
       dormant: https://github.com/wrobstory/vincent/graphs/contributors
@@ -281,7 +286,7 @@
       dormant: https://github.com/almarklein/visvis#status
 
     - repo: mpld3/mpld3
-      site: mpld3.github.io
+      site: https://mpld3.github.io
       dormant: http://www.xavierdupre.fr/app/pymyinstall/helpsphinx/blog/2017/2017-09-02_mpld3.html
 
     - repo: matplotlib/basemap
@@ -290,21 +295,24 @@
 
     - repo: rossant/galry
       dormant: https://github.com/rossant/galry/blob/master/README.md
+      badges: pypi, dormant
 
     - repo: adrn/d3po
-      site: d3po.org
+      site: https://d3po.org
       dormant: https://github.com/adrn/d3po/graphs/contributors
+      badges: site, dormant
 
     - repo: yhat/ggpy
-      site_protocol: http
-      site: ggplot.yhathq.com
+      site: http://ggplot.yhathq.com
       badges: pypi, site
       dormant: https://github.com/yhat/ggpy/graphs/contributors
 
     - repo: PyQwt/PyQwt
       site: http://www.pyqtgraph.org
       dormant: https://github.com/PyQwt
+      badges: site
 
     - repo: dgrtwo/gleam
       dormant: https://github.com/dgrtwo/gleam/graphs/contributors
+      badges: pypi, dormant
 
