--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 
 stages:
   - test
-    if: type != cron
+    if: NOT type = cron
   - name: website_release
     if: branch = master
   - name: website_dev
