--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -1,4 +1,5 @@
 - name: Core
+  intro: Python libraries on which other higher-level libraries are built.
   packages:
 
     - repo: matplotlib/matplotlib
@@ -14,49 +15,51 @@
       pypi_name: plotly
       conda_package: plotly
       conda_channel: conda-forge
-      site: plot.ly
+      site: https://plot.ly
       badges: circleci, pypi, conda, site
 
 - name: High-Level Shared API
+  intro: Libraries sharing the Pandas .plot() API.
   packages:
 
     - repo: pandas-dev/pandas
       sponsors: [numfocus]
-      site: pandas.pydata.org
+      site: https://pandas.pydata.org
       badges: travis, appveyor, codecov, rtd, pypi, conda, site
 
     - repo: pydata/xarray
       sponsors: [numfocus]
       appveyor_project: shoyer/xray
-      site: xarray.pydata.org
+      site: https://xarray.pydata.org
       badges: travis, appveyor, coveralls, rtd, pypi, conda, site
 
     - repo: pyviz/hvplot
       sponsors: [anaconda]
-      site: hvplot.pyviz.org
+      site: https://hvplot.pyviz.org
       badges: travis, appveyor, pypi, conda, site
 
     - repo: PatrikHlobil/Pandas-Bokeh
-      site: github.com/PatrikHlobil/Pandas-Bokeh/blob/master/README.md
+      site: https://github.com/PatrikHlobil/Pandas-Bokeh/blob/master/README.md
       badges: pypi, site
 
     - repo: santosjorge/cufflinks
-      site: github.com/santosjorge/cufflinks/blob/master/README.md
+      site: https://github.com/santosjorge/cufflinks/blob/master/README.md
       badges: circleci, pypi, site
 
     - repo: altair-viz/pdvega
-      site: altair-viz.github.io/pdvega
+      site: https://altair-viz.github.io/pdvega
       badges: travis, pypi, site
 
 - name: High-Level
+  intro: Libraries focusing on high-level operations for working with data visually, built upon the core libraries.
   packages:
 
     - repo: mwaskom/seaborn
-      site: seaborn.pydata.org
+      site: https://seaborn.pydata.org
       badges: travis, codecov, pypi, conda, site
 
     - repo: altair-viz/altair
-      site: altair-viz.github.io
+      site: https://altair-viz.github.io
       conda_channel: conda-forge
       badges: travis, pypi, conda, site
 
@@ -68,26 +71,70 @@
     - repo: spotify/chartify
       sponsors: [spotify]
       conda_channel: conda-forge
-      site: github.com/spotify/chartify/blob/master/README.rst
+      site: https://github.com/spotify/chartify/blob/master/README.rst
       badges: travis, pypi, conda, site
 
     - repo: plotly/plotly_express
       sponsors: [plotly]
-      site: plotly.express
+      site: https://plotly.express
       badges: pypi, site
 
+- name: Other plotting libraries
+  intro: Plotting libraries not fitting into other categories above.
+  packages:
+
+    - repo: bloomberg/bqplot
+      conda_channel: conda-forge
+      badges: pypi, conda, rtd
+
+    - repo: has2k1/plotnine
+      conda_channel: conda-forge
+      badges: pypi, conda, rtd
+
+    - repo: veusz/veusz
+      conda_channel: conda-forge
+      site: https://veusz.github.io
+
+    - repo: sciapp/gr
+      site: https://gr-framework.org/python.html
+      badges: pypi, site
+
+    - repo: Kozea/pygal
+      conda_channel: conda-forge
+
+    - repo: glue-viz/glue
+      site: http://docs.glueviz.org
+      badges: pypi, site
+
+    - repo: sandialabs/toyplot
+      sponsors: [sandia]
+      badges: pypi, rtd
+
+    - repo: enthought/chaco
+      sponsors: [enthought]
+      site: https://docs.enthought.com/chaco
+      badges: pypi
+
+    - repo: pyqtgraph/pyqtgraph
+      site: http://www.pyqtgraph.org
+
+    - repo: biggles-plot/biggles
+      site: https://biggles-plot.github.io
+      badges: pypi
+
 - name: Dashboarding
+  intro: Libraries for creating live Python-backed web applications or dashboards that a user can interact with to explore or analyze data.
   packages:
 
     - repo: plotly/dash
       sponsors: [plotly]
       conda_channel: conda-forge
-      site: dash.plot.ly
+      site: https://dash.plot.ly
       badges: circleci, pypi, conda, site
 
     - repo: pyviz/panel
       sponsors: [anaconda]
-      site: panel.pyviz.org
+      site: https://panel.pyviz.org
       badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: QuantStack/voila
@@ -96,6 +143,7 @@
       badges: travis, pypi, conda, rtd
 
 - name: SciVis
+  intro: Libraries for visualizing scientific data situated in real-world coordinates, typically using OpenGL.
   packages:
 
     - repo: Kitware/VTK
@@ -108,9 +156,13 @@
       conda_channel: conda-forge
       badges: travis, conda, site
 
+    - repo: pyvista/pyvista
+      site: https://docs.pyvista.org
+      conda_channel: conda-forge
+
     - repo: vispy/vispy
       conda_channel: conda-forge
-      site_protocol: http
+      site: http://vispy.org
       badges: travis, appveyor, coveralls, pypi, conda, site
 
     - repo: glumpy/glumpy
@@ -118,25 +170,24 @@
 
     - repo: enthought/mayavi
       sponsors: [enthought]
-      site: docs.enthought.com/mayavi/mayavi
+      site: https://docs.enthought.com/mayavi/mayavi
       appveyor_project: EnthoughtOSS/mayavi
       badges: travis, appveyor, codecov, pypi, conda, site
 
-    - repo: yt-project/yt
-      sponsors: [numfocus]
-      site: yt-project.org
-      badges: travis, codecov, pypi, conda, site
+    - repo: maartenbreddels/ipyvolume
+      conda_channel: conda-forge
 
-- name: Color
+- name: Colormapping
+  intro: Collections of colormaps and tools for generating new colormaps.
   packages:
 
     - repo: pyviz/colorcet
       sponsors: [anaconda]
-      site: colorcet.pyviz.org
+      site: https://colorcet.pyviz.org
       badges: travis, appveyor, pypi, conda, site
 
     - repo: matplotlib/cmocean
-      site: matplotlib.org/cmocean
+      site: https://matplotlib.org/cmocean
       conda_channel: conda-forge
       badges: travis, codecov, pypi, conda
 
@@ -144,38 +195,124 @@
       conda_channel: conda-forge
       badges: travis, codecov, pypi, conda
 
-- name: Domain-specific
+
+- name: Geospatial
+  intro: Tools for working with data in geographic coordinates
   packages:
-
-    - repo: networkx/networkx
-      site: networkx.github.io
-      appveyor_project: dschult/networkx-pqott
-      badges: travis, appveyor, codecov, pypi, conda, site
-
-    - repo: scikit-image/scikit-image
-      site: scikit-image.org
-      badges: travis, appveyor, codecov, pypi, conda, site
 
     - repo: SciTools/cartopy
       sponsors: [metoffice]
-      site: scitools.org.uk/cartopy
+      site: https://scitools.org.uk/cartopy
       badges: travis, appveyor, coveralls, pypi, conda, site
 
     - repo: pyviz/geoviews
       sponsors: [anaconda]
-      site_protocol: http
+      site: http://geoviews.org
       badges: travis, appveyor, pypi, conda, site
 
-- name: Other
+    - repo: python-visualization/folium
+      conda_channel: conda-forge
+
+    - repo: jupyter-widgets/ipyleaflet
+      conda_channel: conda-forge
+      badges: pypi, conda, rtd
+
+    - repo: andrea-cuttone/geoplotlib
+      site: https://github.com/andrea-cuttone/geoplotlib/wiki/User-Guide
+      badges: pypi
+
+- name: Domain-specific
+  intro: Tools focused on specific research or application areas.
+  packages:
+
+    - repo: networkx/networkx
+      site: https://networkx.github.io
+      appveyor_project: dschult/networkx-pqott
+      badges: travis, appveyor, codecov, pypi, conda, site
+
+    - repo: scikit-image/scikit-image
+      site: https://scikit-image.org
+      badges: travis, appveyor, codecov, pypi, conda, site
+
+    - repo: yt-project/yt
+      sponsors: [numfocus]
+      site: https://yt-project.org
+      badges: travis, codecov, pypi, conda, site
+
+    - repo: DistrictDataLabs/yellowbrick
+      site: https://www.scikit-yb.org
+      badges: pypi, site
+
+    - repo: ContextLab/hypertools
+      badges: pypi, rtd
+
+    - repo: ResidentMario/missingno
+      conda_channel: conda-forge
+
+- name: Large-data rendering
+  intro: Tools for server-side rasterizing/aggregating data before visualization.
   packages:
 
     - repo: pyviz/datashader
       sponsors: [anaconda]
-      site_protocol: http
+      site: http://datashader.org
       badges: travis, appveyor, pypi, conda, site
 
     - repo: vaexio/vaex
       sponsors: [vaex.io]
-      site: vaex.io
+      site: https://vaex.io
       conda_channel: conda-forge
       badges: travis, appveyor, pypi, conda, site
+
+
+- name: Dormant projects
+  intro: Tools no longer developed or endorsed by the authors
+  packages:
+
+    - repo: lightning-viz/lightning
+      site: http://lightning-viz.org
+      dormant: https://gitter.im/lightning-viz/lightning
+      badges: pypi, dormant
+
+    - repo: wrobstory/vincent
+      dormant: https://github.com/wrobstory/vincent/graphs/contributors
+      badges: pypi, rtd
+
+    - repo: wireservice/leather
+      dormant: https://github.com/wireservice/leather/graphs/contributors
+      badges: pypi, rtd
+
+    - repo: almarklein/visvis
+      dormant: https://github.com/almarklein/visvis#status
+
+    - repo: mpld3/mpld3
+      site: https://mpld3.github.io
+      dormant: http://www.xavierdupre.fr/app/pymyinstall/helpsphinx/blog/2017/2017-09-02_mpld3.html
+
+    - repo: matplotlib/basemap
+      site: https://matplotlib.org/basemap
+      dormant: https://matplotlib.org/basemap/users/intro.html#cartopy-new-management-and-eol-announcement
+
+    - repo: rossant/galry
+      dormant: https://github.com/rossant/galry/blob/master/README.md
+      badges: pypi, dormant
+
+    - repo: adrn/d3po
+      site: https://d3po.org
+      dormant: https://github.com/adrn/d3po/graphs/contributors
+      badges: site, dormant
+
+    - repo: yhat/ggpy
+      site: http://ggplot.yhathq.com
+      badges: pypi, site
+      dormant: https://github.com/yhat/ggpy/graphs/contributors
+
+    - repo: PyQwt/PyQwt
+      site: http://www.pyqtgraph.org
+      dormant: https://github.com/PyQwt
+      badges: site
+
+    - repo: dgrtwo/gleam
+      dormant: https://github.com/dgrtwo/gleam/graphs/contributors
+      badges: pypi, dormant
+
