Fixing typo in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
           skip_cleanup: true
           github_token: $GITHUB_TOKEN
           local_dir: ./builtdocs
-          fqdn: pyviz.orf
+          fqdn: pyviz.org
           on:
             all_branches: true
 
