--- a/tools/sponsors.yml
+++ b/tools/sponsors.yml
@@ -1,52 +1,52 @@
 numfocus:
   label: NumFocus
   url: https://numfocus.org
-  logo: _static/logos/numfocus.png
+  logo: _static/badges/numfocus.png
 
 anaconda:
   label: Anaconda
   url: https://www.anaconda.com
-  logo: _static/logos/anaconda.png
+  logo: _static/badges/anaconda.png
 
 metoffice:
   label: Met Office
   url: https://www.metoffice.gov.uk
-  logo: _static/logos/metoffice.png
+  logo: _static/badges/metoffice.png
 
 spotify:
   label: Spotify
   url: https://www.spotify.com
-  logo: _static/logos/spotify.png
+  logo: _static/badges/spotify.png
 
 plotly:
   label: Plot.ly
   url: https://plot.ly
-  logo: _static/logos/plotly.png
+  logo: _static/badges/plotly.png
 
 kitware:
   label: Kitware
   url: https://www.kitware.com
-  logo: _static/logos/kitware.svg
+  logo: _static/badges/kitware.svg
 
 enthought:
   label: Enthought
   url: https://www.enthought.com
-  logo: _static/logos/enthought.svg
+  logo: _static/badges/enthought.svg
 
 nvidia:
   label: NVIDIA
   url: https://www.nvidia.com
-  logo: _static/logos/nvidia.jpg
+  logo: _static/badges/nvidia.jpg
 
 sandia:
   label: Sandia
   url: https://www.sandia.gov
-  logo: _static/logos/sandia.png
+  logo: _static/badges/sandia.png
 
 quantstack:
   label: QuantStack
   url: http://quantstack.net
-  logo: _static/logos/quantstack.svg
+  logo: _static/badges/quantstack.svg
 
 vaex.io:
   label: vaex.io
