--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -2,7 +2,11 @@ name: pyviz
 channels:
   - conda-forge
 dependencies:
+  - colorcet
+  - fastparquet
   - flake8
+  - intake
+  - intake-parquet
   - jinja2
   - m2r
   - markdown
